Changed Maude unit tests to work on my machine
git-svn-id: https://repos.hats-project.eu:444/svn/hats/Tools/ABS/trunk@5647 97f52227-7fa9-4375-a72d-c1c733b1f48f